--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="hero-content">
                 <h1>Transformamos o aço em arte</h1>
                 <p>Há mais de 30 anos, a ACÁCIO realiza projetos em aço inox com excelência, design e durabilidade, marcando presença nas principal obras do Brasil</p>
-                <a href="produtos.html" class="btn btn-primary">Conheça Nossos Produtos</a>
+                <a href="https://wa.me/5548996890061" class="btn btn-primary">Conheça Nossos Produtos</a>
             </div>
         </section>
 
@@ -309,7 +309,7 @@
         
                 <div class="portfolio-cta">
                     <p>Todos os nossos projetos são desenvolvidos sob medida para atender às necessidades específicas de cada cliente.</p>
-                    <a href="#contato" class="cta-btn">Quero um projeto como esses</a>
+                    <a href="https://wa.me/5548996890061" class="cta-btn">Quero um projeto como esses</a>
                 </div>
             </div>
         
