feat: new videos

--- a/index.html
+++ b/index.html
@@ -63,17 +63,36 @@
 
     <main>
 
-        <section class="hero" id="home">
+        <!-- <section class="hero" id="home">
             <div class="hero-content">
                 <h1>Soluções em aço inox</h1>
-                <!-- <p>Há mais de 30 anos, a ACÁCIO realiza projetos em aço inox com excelência, design e durabilidade, marcando presença nas principal obras do Brasil</p> -->
                 <p>Com mais de 30 anos de experiência, a Acácio Metalúrgica é referência nacional no desenvolvimento de projetos e soluções em aço inox. Unimos tradição e inovação para entregar produtos de alta durabilidade, eficiência e tecnologia, sempre com o compromisso de oferecer resultados definitivos e personalizados para cada cliente.</p>
                 <p>Atendemos empresas de diversos segmentos em todo o território nacional, com excelência, precisão e responsabilidade. Nossa missão é transformar desafios em soluções robustas, funcionais e duradouras.</p>
                 <p>Conte com a Acácio Metalúrgica para transformar seu projeto em realidade.</p>
                 <a href="https://wa.me/5548996890061" target='_blank' class="btn btn-primary">Conheça Nossos Produtos</a>
             </div>
-        </section>
+        </section> -->
         
+        <section class="hero" id="home">
+           <!-- Vídeo de fundo -->
+            <video class="background-video" autoplay loop muted playsinline>
+                <source src="/assets/teste-temporario.webm" type="video/webm" />
+                <source src="/assets/teste temporario.mp4" type="video/mp4" />
+                Seu navegador não suporta vídeo HTML5.
+            </video>
+
+            <!-- Conteúdo acima do vídeo -->
+            <div class="hero-content">
+                <h1>Soluções em aço inox</h1>
+                <p>Com mais de 30 anos de experiência, a Acácio Metalúrgica é referência nacional no desenvolvimento de projetos e soluções em aço inox...</p>
+                <p>Atendemos empresas de diversos segmentos em todo o território nacional, com excelência, precisão e responsabilidade...</p>
+                <p>Conte com a Acácio Metalúrgica para transformar seu projeto em realidade.</p>
+                <a href="https://wa.me/5548996890061" target="_blank" class="btn btn-primary">Conheça Nossos Produtos</a>
+            </div>
+        </section>
+
+        
+
         <section class="quem-somos" id="quem_somos">
             <div class="container">
                 <div class="header-section">
