--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acácio - Excelência em Metalurgia</title>
-    <link rel="stylesheet" href="styles/style_enhanced.css"> <!-- Enhanced General Styles -->
-    <link rel="stylesheet" href="styles/animations_enhanced.css"> <!-- Enhanced Animations -->
-    <!-- Section Specific Styles (Now Enhanced) -->
-    <link rel="stylesheet" href="styles/style_footer.css">
-    <link rel="stylesheet" href="styles/style_home_section_hero_top.css">
-    <link rel="stylesheet" href="styles/style_home_section_quem_somos.css">
-    <link rel="stylesheet" href="styles/style_home_section_o_que_fazemos_v2_full.css">
-    <link rel="stylesheet" href="styles/style_home_section_portfolio.css">
-    <link rel="stylesheet" href="styles/style_home_section_depoimentos_v2_full.css">
-    <link rel="stylesheet" href="styles/style_home_section_contato.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <title>Acácio - Excelência em Metalurgia | Soluções em Metalurgia de Precisão</title>
+  
+  <meta name="description" content="Acácio Metalurgia oferece soluções de alta qualidade em metalurgia de precisão, atendendo indústrias com excelência e tecnologia avançada." />
+  
+  <meta name="keywords" content="metalurgia, metalurgia de precisão, Acácio, soluções industriais, metalurgia de qualidade" />
+  
+  <meta name="author" content="Acácio Metalurgia" />
+  
+  <link rel="canonical" href="https://www.acacio.com.br/" />
+  
+  <!-- Open Graph para redes sociais -->
+  <meta property="og:title" content="Acácio - Excelência em Metalurgia" />
+  <meta property="og:description" content="Soluções em metalurgia de precisão com alta qualidade e tecnologia avançada." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.acacio.com.br/" />
+  <meta property="og:image" content="https://www.acacio.com.br/assets/new_logo.png" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Acácio - Excelência em Metalurgia" />
+  <meta name="twitter:description" content="Soluções em metalurgia de precisão com alta qualidade e tecnologia avançada." />
+  <meta name="twitter:image" content="https://www.acacio.com.br/assets/new_logo.png" />
 
-    <!-- <script src="./actions/depoimentos.js"></script> -->
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <!-- Favicon: usar .ico preferencialmente para suporte máximo -->
+  <link rel="icon" href="assets/new_logo.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/new_logo.png" type="image/x-icon" />
+  
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles/style_enhanced.css?v=1" />
+  <link rel="stylesheet" href="styles/animations_enhanced.css?v=1" />
+  <link rel="stylesheet" href="styles/style_footer.css?v=1" />
+  <link rel="stylesheet" href="styles/style_home_section_hero_top.css?v=1" />
+  <link rel="stylesheet" href="styles/style_home_section_quem_somos.css?v=1" />
+  <link rel="stylesheet" href="styles/style_home_section_o_que_fazemos_v2_full.css?v=1" />
+  <link rel="stylesheet" href="styles/style_home_section_portfolio.css?v=1" />
+  <link rel="stylesheet" href="styles/style_home_section_depoimentos_v2_full.css?v=1" />
+  <link rel="stylesheet" href="styles/style_home_section_contato.css?v=1" />
+  
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  
 </head>
+
 
 <a href="https://wa.me/5548996890061" class="whatsapp-float" target="_blank" aria-label="Conversar via WhatsApp">
   <i class="fab fa-whatsapp"></i>
@@ -305,9 +333,9 @@
                         <div class="portfolio-img-container">
                             <div class="portfolio-slideshow">
                                 <img src="assets/corrimao/Clinica do Aparelho Digestivo 03.jpg" class="portfolio-slide active">
-                                <img src="assets/corrimao/corrimão casa jurere 01.JPG" class="portfolio-slide">
+                                <img src="assets/corrimao/corrimão casa jurere 01.jpg" class="portfolio-slide">
                                 <img src="assets/corrimao/IMG_5326.jpg" class="portfolio-slide">
-                                <img src="assets/corrimao/Metalúrgica Acácio - Escada.JPG" class="portfolio-slide">
+                                <img src="assets/corrimao/Metalúrgica Acácio - Escada.jpg" class="portfolio-slide">
                                 <img src="assets/corrimao/PortoIlha-11.jpg" class="portfolio-slide">
                             </div>
                             <div class="portfolio-overlay">
