--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5B3NPJ9Q');</script>
+    <!-- End Google Tag Manager -->
+
+
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Acácio - Excelência em Metalurgia | Soluções em Metalurgia de Precisão</title>
+  <title>Acácio - Soluções em aço inox</title>
   
   <meta name="description" content="Acácio Metalurgia oferece soluções de alta qualidade em metalurgia de precisão, atendendo indústrias com excelência e tecnologia avançada." />
   
@@ -15,7 +26,7 @@
   <link rel="canonical" href="https://www.acacio.com.br/" />
   
   <!-- Open Graph para redes sociais -->
-  <meta property="og:title" content="Acácio - Excelência em Metalurgia" />
+  <meta property="og:title" content="Acácio - Soluções em aço inox" />
   <meta property="og:description" content="Soluções em metalurgia de precisão com alta qualidade e tecnologia avançada." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.acacio.com.br/" />
@@ -55,6 +66,14 @@
 </a>
 
 <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5B3NPJ9Q"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+
+
     <header>
         <div class="header-container">
             <div class="logo">
@@ -112,8 +131,8 @@
             <!-- Conteúdo acima do vídeo -->
             <div class="hero-content">
                 <h1>Soluções em aço inox</h1>
-                <p>Com mais de 30 anos de experiência, a Acácio Metalúrgica é referência nacional no desenvolvimento de projetos e soluções em aço inox...</p>
-                <p>Atendemos empresas de diversos segmentos em todo o território nacional, com excelência, precisão e responsabilidade...</p>
+                <p>Com mais de 30 anos de experiência, a Acácio Metalúrgica é referência nacional no desenvolvimento de projetos e soluções em aço inox.</p>
+                <p>Atendemos empresas de diversos segmentos em todo o território nacional, com excelência, precisão e responsabilidade.</p>
                 <p>Conte com a Acácio Metalúrgica para transformar seu projeto em realidade.</p>
                 <a href="https://wa.me/5548996890061" target="_blank" class="btn btn-primary">Conheça Nossos Produtos</a>
             </div>
